Add all content placeholders

--- a/PhdThesisIngaSamonenko/PhdThesisIngaSamonenko/Views/Home/Index.cshtml
+++ b/PhdThesisIngaSamonenko/PhdThesisIngaSamonenko/Views/Home/Index.cshtml
@@ -4,10 +4,17 @@
 
 <html>
 <head>
-<title>Inga Samonenko's PhD thesis</title>
+    <title>Inga Samonenko's PhD thesis</title>
 </head>
 <body>
-<h1>Inga Samonenko's PhD thesis</h1>
-Coming soon...
+    <h1>Inga Samonenko's PhD thesis</h1>
+    Coming soon...
+
+    <p>@Html.ActionLink("BD", "Index", "BD")</p>
+    <p>@Html.ActionLink("KD", "Index", "KD")</p>
+    <p>@Html.ActionLink("KMD", "Index", "KMD")</p>
+    <p>@Html.ActionLink("Genz", "Index", "Genz")</p>
+
+
 </body>
 </html>
