--- a/PhdThesisIngaSamonenko/PhdThesisIngaSamonenko/Views/Home/Index.cshtml
+++ b/PhdThesisIngaSamonenko/PhdThesisIngaSamonenko/Views/Home/Index.cshtml
@@ -10,10 +10,10 @@
     <h1>Inga Samonenko's PhD thesis</h1>
     Coming soon...
 
-    <p>@Html.ActionLink("BD", "Index", "BD")</p>
-    <p>@Html.ActionLink("KD", "Index", "KD")</p>
-    <p>@Html.ActionLink("KMD", "Index", "KMD")</p>
-    <p>@Html.ActionLink("Genz", "Index", "Genz")</p>
+    <p>@Html.ActionLink("BDcode", "Index", "BDcode")</p>
+    <p>@Html.ActionLink("KDcode", "Index", "KDcode")</p>
+    <p>@Html.ActionLink("KMDcode", "Index", "KMDcode")</p>
+    <p>@Html.ActionLink("Genzcode", "Index", "Genzcode")</p>
 
 
 </body>
